--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 body {
-  background-color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-image: url(https://kipmu.ru/wp-content/uploads/sky_chtk-1280x720.jpeg);
+  text-align: center;
 }
 
 h1 {
@@ -9,10 +9,14 @@ h1 {
   color: #2a2a2a;
 }
 
-.container {
-  text-align: center;
+.form {
+  display: inline-flex;
 }
 
-.timer {
-  display: inline-block;
+ul {
+  list-style-type: none;
+}
+
+.js-form-enter {
+  height: 30px;
 }
